[package]
name = "rapl"
version = "0.3.0"
edition = "2021"
description = "A crate that makes numerical scripting with Rust simple and enjoyable."
readme = "README.md"
repository = "https://github.com/JErnestoMtz/rapl"
license = "MIT"
keywords = ["math", "tensor", "type"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24.6", optional = true}
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
typenum = "1.16.0"
rustfft = {version = "6.1.0", optional = true}


[features]
default = ["complex", "rapl_image", "fft"]
fft = ["complex", "dep:rustfft"]
complex = []
rapl_image = ["dep:image"]
